Fix - Add missing color variable

--- a/assets/scss/base/_variables.scss
+++ b/assets/scss/base/_variables.scss
@@ -7,6 +7,7 @@ $white: #FFFFFF;
 $black: #000000;
 $wild-sand: #F6F6F6;
 $gray-chateau: #9FA8AE;
+$porcelain: #EAEDEE;
 
 // Accent
 $yellow: #FFEB00;
